[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "urti"
dynamic = ["version"]
authors = [
    {name = "Great Scott Gadgets", email = "dev@greatscottgadgets.com"},
]
license = { text = "BSD" }
description = "Python library for the Great Scott Gadgets URTI mainboard"
urls = { Source = "https://greatscottgadgets.com/urti" }
readme = "README.md"
dependencies = [
    "amaranth @ git+https://github.com/amaranth-lang/amaranth",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc",
    "luna @ git+https://github.com/mndza/luna.git@remove-deprecated-helpers",
    "pyusb",
    "future",
    "pyfwup>=0.2",
    "tqdm",
    "tabulate",
    "prompt_toolkit",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
urti = "src"

[tool.setuptools.package-data]
"urti.shared" = ["*.toml"]